--- a/.github/workflows/deploy-to-pantheon.yml
+++ b/.github/workflows/deploy-to-pantheon.yml
@@ -34,7 +34,7 @@ jobs:
       run: |
         echo ${{ secrets.KNOWN_HOSTS }}
         git remote add pantheon $pantheon_repo
-        git push pantheon --force HEAD:master
+        git push pantheon HEAD:master
         commit_message=$(git log -1 --pretty=%B)
         terminus env:deploy $pantheon_site_name.test --note="Automated deploy: $commit_message"
         terminus env:deploy $pantheon_site_name.live --note="Automated deploy: $commit_message"
